--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,17 +24,32 @@
     ],
     "paths": {
       "@/*": [
-        "./*"
+        "./src/*"
+      ],
+      "@/components/*": [
+        "./src/components/*"
+      ],
+      "@/lib/*": [
+        "./src/lib/*"
+      ],
+      "@/app/*": [
+        "./src/app/*"
+      ],
+      "@/styles/*": [
+        "./src/styles/*"
+      ],
+      "@/validations/*": [
+        "./src/validations/*"
       ]
     }
   },
   "include": [
     "next-env.d.ts",
+    "bun.d.ts",
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
-    ".next/dev/types/**/*.ts",
-    "**/*.mts"
+    "src/**/*.css"
   ],
   "exclude": [
     "node_modules"
