--- a/tsconfig.json
+++ b/tsconfig.json
@@ -48,7 +48,8 @@
     "bun.d.ts",
     "**/*.ts",
     "**/*.tsx",
-    ".next/types/**/*.ts"
+    ".next/types/**/*.ts",
+    ".next/dev/types/**/*.ts"
   ],
   "exclude": [
     "node_modules"
