--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -102,4 +102,7 @@ jobs:
 
       - name: Build Next.js
         run: bun run build
+        env:
+          NEXT_PUBLIC_APP_URL: ${{ env.NEXT_PUBLIC_APP_URL }}
+          BACKEND_URL: ${{ env.BACKEND_URL }}
 
