Update CI workflow to use secrets for environment variables
- Changed `NEXT_PUBLIC_APP_URL` and `BACKEND_URL` in the CI configuration to use GitHub secrets for enhanced security during the Next.js build process.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -103,6 +103,6 @@ jobs:
       - name: Build Next.js
         run: bun run build
         env:
-          NEXT_PUBLIC_APP_URL: ${{ env.NEXT_PUBLIC_APP_URL }}
-          BACKEND_URL: ${{ env.BACKEND_URL }}
+          NEXT_PUBLIC_APP_URL: ${{ secrets.NEXT_PUBLIC_APP_URL }}
+          BACKEND_URL: ${{ secrets.BACKEND_URL }}
 
