--- a/package.json
+++ b/package.json
@@ -29,11 +29,14 @@
     "next": "16.0.2",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "react-player": "^3.4.0",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "valibot": "^1.1.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@tailwindcss/typography": "^0.5.19",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
