--- a/package.json
+++ b/package.json
@@ -26,9 +26,9 @@
     "cmdk": "^1.1.1",
     "html-react-parser": "^5.2.9",
     "lucide-react": "^0.553.0",
-    "next": "16.0.2",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
+    "next": "^16.0.7",
+    "react": "^19.2.1",
+    "react-dom": "^19.2.1",
     "react-player": "^3.4.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
