refactor: Update authentication forms and navigation components
- Changed the callback URL handling in the Signin and Signup forms to support redirection after successful login and registration.
- Updated the navigation links in the HomePage and ModuleNavigation components for better routing consistency.
- Introduced a new Sheet component for mobile navigation in the DashboardNav, enhancing the user interface.
- Improved form error handling and added loading states to the submit buttons in the authentication forms.
- Refactored the environment variable for the public URL in the CI workflow and authentication actions for consistency.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -103,6 +103,6 @@ jobs:
       - name: Build Next.js
         run: bun run build
         env:
-          NEXT_PUBLIC_APP_URL: ${{ secrets.NEXT_PUBLIC_APP_URL }}
+          NEXT_PUBLIC_URL: ${{ secrets.NEXT_PUBLIC_URL }}
           BACKEND_URL: ${{ secrets.BACKEND_URL }}
 
