--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "html-react-parser": "^5.2.9",
     "lucide-react": "^0.553.0",
     "next": "^16.0.7",
+    "next-themes": "^0.4.6",
     "react": "^19.2.1",
     "react-dom": "^19.2.1",
     "react-player": "^3.4.0",
