--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "valibot": "^1.1.0"
   },
   "devDependencies": {
+    "@biomejs/biome": "2.3.10",
     "@playwright/test": "^1.57.0",
     "@tailwindcss/postcss": "^4",
     "@tailwindcss/typography": "^0.5.19",
